# vectorized

./: CMakeLists.txt  main.cpp
collections/: CMakeLists.txt  MinHeap.hpp  MinHeapBench.cpp  MinHeapTest.cpp  VSet.hpp  VSetBench.cpp  VSetTest.cpp
distributions/: CMakeLists.txt  Marsaglia.hpp  MarsagliaBench.cpp  MarsagliaTest.cpp  Uniform.hpp  UniformBench.cpp  UniformTest.cpp  Xoshiro.hpp
thompson/: CMakeLists.txt  Thompson.hpp  ThompsonBench.cpp  ThompsonTest.cpp
utils/: AlignedVector.hpp  Benchmarking.hpp  DistributionStats.hpp  Testing.hpp
